add verify otp functionality